--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # DBS
 MAIN_DB_HOST = 127.0.0.1
 MAIN_DB_PORT = 3306
-MAIN_DB_USER = local
+MAIN_DB_USER = root
 MAIN_DB_PASSWORD = root
 MAIN_DB_DATABASE = basic_db
 
