--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "dotenv": "^16.0.3",
         "knex": "^2.3.0",
+        "mysql": "^2.18.1",
         "mysql2": "^2.3.3"
     }
 }
