--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
+        "csvtojson": "^2.0.10",
         "dotenv": "^16.0.3",
+        "jsonwebtoken": "^8.5.1",
         "knex": "^2.3.0",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3"
