--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
         "csvtojson": "^2.0.10",
         "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
         "jsonwebtoken": "^8.5.1",
         "knex": "^2.3.0",
+        "lodash": "^4.17.21",
+        "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3"
     }
